# vertibayes_vantage6

./: .dockerignore  .gitignore  Dockerfile  README.md  push.sh  pyproject.toml  setup.py  test.ipynb
src/: Dockerfile  setup.py
src/com/: __init__.py
src/com/florian/: __init__.py  urlcollector.py
src/com/florian/urlcollector/: UrlCollector.py
src/com/florian/vertibayes/: __init__.py  client.py  main.py  secondary.py
src/com/florian/vertibayes/bayes/: VertiBayes.py  __init__.py
src/com/florian/vertibayes/domain/: Node.py  Theta.py
src/com/florian/vertibayes/util/: BifToNetConverter.py  __init__.py
test/com/florian/: __init__.py
test/com/florian/vertibayes/: __init__.py
test/com/florian/vertibayes/bayes/: VertiBayesTest.py  __init__.py
test/com/florian/vertibayes/util/: TestBifToNetConverter.py  __init__.py
