[tool.poetry]
name = "vertibayespython"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "com", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
requests = "^2.25.1"
vantage6-client = "^3.2.0"
setuptools = "^59.6.0"
wheel = "^0.37.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
